feat(auth): fix older token => add token inverted
